Bug 288347 - disconnect openvpn from plasmoid-nm in 4.8 beta
Summary: disconnect openvpn from plasmoid-nm in 4.8 beta
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-06 17:10 UTC by Bruno Friedmann
Modified: 2011-12-07 00:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno Friedmann 2011-12-06 17:10:18 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.7.4 (4.7.4) "release 8"
Qt Version: 4.8.0
Operating System: Linux 3.1.0-2-desktop x86_64
Distribution: "openSUSE 12.2 Milestone 0 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed: after a successful connection to an openvpn I ask for disconnect in plasmoid nm.
The crash occur immediately.

This could be due to 4.8beta packaging testing by openSUSE KDE Maintainers.

-- Backtrace:
Application: KDE Daemon (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f0021558760 (LWP 3163))]

Thread 4 (Thread 0x7f0005e24700 (LWP 3599)):
#0  0x00007f001eb693a3 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f001b91da98 in g_main_context_poll (n_fds=1, fds=0x8aa530, timeout=-1, context=0x930cc0, priority=<optimized out>) at gmain.c:3386
#2  g_main_context_iterate (context=0x930cc0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3068
#3  0x00007f001b91df59 in g_main_context_iteration (context=0x930cc0, may_block=1) at gmain.c:3136
#4  0x00007f00201cef56 in QEventDispatcherGlib::processEvents (this=0x7f10c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f002019ecc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f002019ef17 in QEventLoop::exec (this=0x7f0005e23e20, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f00200a04e7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007f00200a350b in QThreadPrivate::start (arg=0x92ce50) at thread/qthread_unix.cpp:298
#9  0x00007f001fe0bf05 in start_thread (arg=0x7f0005e24700) at pthread_create.c:301
#10 0x00007f001eb724bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 3 (Thread 0x7f0005623700 (LWP 3615)):
#0  0x00007f001eb693a3 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f001b91da98 in g_main_context_poll (n_fds=1, fds=0x8e0790, timeout=-1, context=0x984ce0, priority=<optimized out>) at gmain.c:3386
#2  g_main_context_iterate (context=0x984ce0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3068
#3  0x00007f001b91df59 in g_main_context_iteration (context=0x984ce0, may_block=1) at gmain.c:3136
#4  0x00007f00201cef56 in QEventDispatcherGlib::processEvents (this=0x984980, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f002019ecc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f002019ef17 in QEventLoop::exec (this=0x7f0005622df0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f00200a04e7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007f002017eb9f in QInotifyFileSystemWatcherEngine::run (this=0x982780) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f00200a350b in QThreadPrivate::start (arg=0x982780) at thread/qthread_unix.cpp:298
#10 0x00007f001fe0bf05 in start_thread (arg=0x7f0005623700) at pthread_create.c:301
#11 0x00007f001eb724bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7f0002164700 (LWP 3702)):
#0  0x00007f001eb693a3 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f001b91da98 in g_main_context_poll (n_fds=3, fds=0xa5f120, timeout=-1, context=0xa5ee00, priority=<optimized out>) at gmain.c:3386
#2  g_main_context_iterate (context=0xa5ee00, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3068
#3  0x00007f001b91e2c2 in g_main_loop_run (loop=0xa139d0) at gmain.c:3281
#4  0x00007f000265c946 in gdbus_shared_thread_func (user_data=<optimized out>) at gdbusprivate.c:276
#5  0x00007f001b942db6 in g_thread_create_proxy (data=0xa5eef0) at gthread.c:1962
#6  0x00007f001fe0bf05 in start_thread (arg=0x7f0002164700) at pthread_create.c:301
#7  0x00007f001eb724bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f0021558760 (LWP 3163)):
[KCrash Handler]
#6  QHashData::nextNode (node=0xb958d0) at tools/qhash.cpp:294
#7  0x00007f0003910bd0 in operator++ (this=<synthetic pointer>) at /usr/include/QtCore/qhash.h:427
#8  NMDBusActiveConnectionMonitor::activeConnectionListChanged (this=0xc3ee50) at /usr/src/debug/networkmanagement-0.9.60git.1323036498/backends/NetworkManager/nmdbusactiveconnectionmonitor.cpp:158
#9  0x00007f00201b3d91 in QMetaObject::activate (sender=0xbc4c30, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3555
#10 0x00007f0003671289 in NetworkManager::NetworkManagerPrivate::propertiesChanged (this=0xbc4c30, properties=...) at /usr/src/debug/libnm-qt-0.5.0git.1322715388/manager.cpp:418
#11 0x00007f00201b3d91 in QMetaObject::activate (sender=0xbc4c50, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffa5ff0390) at kernel/qobject.cpp:3555
#12 0x00007f000369b3b5 in OrgFreedesktopNetworkManagerInterface::PropertiesChanged (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/libnm-qt-0.5.0git.1322715388/build/nm-managerinterface.moc:237
#13 0x00007f000369bc34 in OrgFreedesktopNetworkManagerInterface::qt_static_metacall (_o=0xbc4c50, _c=<optimized out>, _id=3, _a=0x7fffa5ff0a20) at /usr/src/debug/libnm-qt-0.5.0git.1322715388/build/nm-managerinterface.moc:109
#14 0x00007f000369cd3f in OrgFreedesktopNetworkManagerInterface::qt_metacall (this=0xbc4c50, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fffa5ff0a20) at /usr/src/debug/libnm-qt-0.5.0git.1322715388/build/nm-managerinterface.moc:169
#15 0x00007f001cecaeab in QDBusConnectionPrivate::deliverCall (this=0x91b180, object=0xbc4c50, msg=..., metaTypes=..., slotIdx=8) at qdbusintegrator.cpp:947
#16 0x00007f00201b8f36 in QObject::event (this=0xbc4c50, e=<optimized out>) at kernel/qobject.cpp:1203
#17 0x00007f001f309b74 in notify_helper (e=0xb949f0, receiver=0xbc4c50, this=0x6ca8f0) at kernel/qapplication.cpp:4518
#18 QApplicationPrivate::notify_helper (this=0x6ca8f0, receiver=0xbc4c50, e=0xb949f0) at kernel/qapplication.cpp:4490
#19 0x00007f001f30e9f3 in QApplication::notify (this=0x7fffa5ff1450, receiver=0xbc4c50, e=0xb949f0) at kernel/qapplication.cpp:4379
#20 0x00007f0020f5d0f6 in KApplication::notify (this=0x7fffa5ff1450, receiver=0xbc4c50, event=0xb949f0) at /usr/src/debug/kdelibs-git/kdeui/kernel/kapplication.cpp:311
#21 0x00007f002019fedc in QCoreApplication::notifyInternal (this=0x7fffa5ff1450, receiver=0xbc4c50, event=0xb949f0) at kernel/qcoreapplication.cpp:876
#22 0x00007f00201a377a in sendEvent (event=0xb949f0, receiver=0xbc4c50) at kernel/qcoreapplication.h:231
#23 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x610360) at kernel/qcoreapplication.cpp:1500
#24 0x00007f00201ceac3 in sendPostedEvents () at kernel/qcoreapplication.h:236
#25 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#26 0x00007f001b91d58d in g_main_dispatch (context=0x6cca70) at gmain.c:2425
#27 g_main_context_dispatch (context=0x6cca70) at gmain.c:2995
#28 0x00007f001b91dd88 in g_main_context_iterate (context=0x6cca70, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3073
#29 0x00007f001b91df59 in g_main_context_iteration (context=0x6cca70, may_block=1) at gmain.c:3136
#30 0x00007f00201ceeef in QEventDispatcherGlib::processEvents (this=0x616eb0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#31 0x00007f001f3ace1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007f002019ecc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007f002019ef17 in QEventLoop::exec (this=0x7fffa5ff13e0, flags=...) at kernel/qeventloop.cpp:204
#34 0x00007f00201a3a75 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#35 0x00007f000c86b495 in kdemain (argc=1, argv=0x69a2f0) at /usr/src/debug/kdelibs-git/kded/kded.cpp:924
#36 0x00000000004088e4 in launch (argc=1, _name=0x40b413 "kded4", args=<optimized out>, cwd=0x0, envc=<optimized out>, envs=<optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x40b28e "0") at /usr/src/debug/kdelibs-git/kinit/kinit.cpp:734
#37 0x0000000000405ec9 in main (argc=4, argv=0x7fff00000001, envp=0x7fffa5ff2540) at /usr/src/debug/kdelibs-git/kinit/kinit.cpp:1849

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-12-07 00:51:25 UTC
Git commit 3ff0aa417b0dded1dc64b88587ee8c7409bf0617 by Lamarque V. Souza.
Committed on 07/12/2011 at 01:49.
Pushed by lvsouza into branch 'master'.

Use correct iterator when removing items.

BUG: 288347

M  +5    -3    backends/NetworkManager/nmdbusactiveconnectionmonitor.cpp

http://commits.kde.org/networkmanagement/3ff0aa417b0dded1dc64b88587ee8c7409bf0617