Use correct iterator when removing items.

BUG: 288347